--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@google/genai": "^1.19.0"
+    "@google/genai": "1.19.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
